2011-08-30 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCsymt.c,
	  src/SDCCpeeph.c:
	  Minor code cleanup.

2011-09-01 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/sdcc.nsi:
	  dont't include readline5.dll in 64bit package
	* support/regression/ports/pic14/spec.mk,
	  support/regression/ports/pic16/spec.mk,
	  support/regression/ports/hc08/spec.mk,
	  support/regression/ports/ds390/spec.mk,
	  support/regression/ports/ucz80/spec.mk,
	  support/regression/ports/mcs51-common/spec.mk:
	  configurable $(WINE)

2011-08-31 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/sdcc.nsi: introduced WIN64 for 64bit dlls inclusion

2011-08-30 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp:
	  Construct conflict graph again instead of trusting the one from sdcc.

2011-08-30 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/tancotf.c,
	  device/lib/acosf.c,
	  device/lib/sinf.c,
	  device/lib/asincosf.c,
	  device/lib/_fsadd.c,
	  device/lib/asinf.c,
	  device/lib/printf_large.c,
	  device/lib/_divulong.c,
	  device/lib/_atof.c,
	  device/lib/cotf.c,
	  device/lib/expf.c,
	  device/lib/sincosf.c,
	  device/lib/tanf.c,
	  device/lib/sincoshf.c,
	  device/lib/cosf.c:
	  Use BOOL or _Bool.

2011-08-30 Borut Razem <borut.razem AT gmail.com>

	* support/cpp/libcpp/lex.c:
	  reverted to revision r6084 (before sdcpp 4.6.1 synchronization),
	  partialy re-synchronized with sdcpp 4.6.1
	* support/cpp/libcpp/macro.c: fixed naked hash handling
	* support/regression/test/bitfields.c:
	  fixed a regtest failure on i386 and x86_64 host architectures with
	  gcc 4.6 by turning off the -O2 optimization

2011-08-29 Borut Razem <borut.razem AT gmail.com>

	* support/cpp/libiberty/getpwd.c: reverted; it was committed by mistake
	* support/cpp/libcpp/lex.c: disable fast scanner using SSE due to
	  bug #3400132: fatal error: ../gcc/config/i386/cpuid.h

2011-08-29 Maarten Brock <sourceforge.brock AT dse.nl>
